# bastion

./: Cargo.toml  README.md  SKILL.md  SPEC.md  animation.py  config.toml  demo_script.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_sentinel.py
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json
crates/core/src/policy/: evaluator.rs  types.rs
crates/core/src/risk/: webacy.rs
crates/core/src/transaction/: normalized.rs
crates/sidecar/src/: audit.rs  core_adapter.rs  grond_oracle.rs  lib.rs  main.rs  policy.rs  program_client.rs  simulation.rs
crates/sidecar/tests/: api_integration.rs  transaction_battery.rs
crates/solana/programs/bastion-audit/src/: lib.rs
dashboard/: package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Navbar.tsx  VideoBackground.tsx
dashboard/src/context/: ThemeContext.tsx
dashboard/src/pages/: Dashboard.tsx  Landing.tsx
dashboard/src/styles/: fonts.css  theme.css
docs/grond-integration/: README.md  address_risk.py
media/videos/animation/1080p60/partial_movie_files/SentinelDemo/: partial_movie_file_list.txt
media/videos/animation/480p15/partial_movie_files/SentinelDemo/: partial_movie_file_list.txt
src/: audit.rs  lib.rs  logger.rs  main.rs  policy.rs  simulation.rs
static/: index.html
tests/: api_integration.rs  policy_engine_suite.rs  simulation_checks.rs  transaction_battery.rs
